--- a/css/main.css
+++ b/css/main.css
@@ -2042,8 +2042,8 @@ body.lock {
 
 #scrollToTopBtn {
   display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 100px; /* Place the button at the bottom of the page */
+  position: absolute; /* Fixed/sticky position */
+  top: -25px; /* Place the button at the bottom of the page */
   left: 5px; /* Place the button from the left */
   z-index: 10; /* Make sure it does not overlap */
   background-color: transparent; /* Set a background color */
@@ -2067,7 +2067,6 @@ body.lock {
   overflow: hidden;
   width: 50px;
   height: 50px;
-  opacity: 0.5;
   scale: 0.75;
 }
 .up-button svg {
@@ -2089,7 +2088,4 @@ body.lock {
   .up-button {
     scale: 1;
   }
-}
-.up-button:hover, .up-button:focus {
-  opacity: 1;
 }/*# sourceMappingURL=main.css.map */
