--- a/sass/components/_up-button.scss
+++ b/sass/components/_up-button.scss
@@ -1,7 +1,7 @@
 #scrollToTopBtn {
   display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 100px; /* Place the button at the bottom of the page */
+  position: absolute; /* Fixed/sticky position */
+  top: -25px; /* Place the button at the bottom of the page */
   left: 5px; /* Place the button from the left */
   z-index: 10; /* Make sure it does not overlap */
   background-color: transparent; /* Set a background color */
@@ -22,7 +22,6 @@
   overflow: hidden;
   width: 50px;
   height: 50px;
-	opacity: 0.5;
 	scale: 0.75;
   & svg {
     position: absolute;
@@ -38,8 +37,4 @@
   @media screen and (min-width: 1600px) {
     scale: 1;
   }
-	&:hover,
-	&:focus {
-		opacity: 1;
-	}
 }
