--- a/sass/utils/_commons.scss
+++ b/sass/utils/_commons.scss
@@ -53,14 +53,15 @@ select {
 }
 
 @font-face {
-  font-family: "Proxima-Nova";
-  src: url(../../fonts/ProximaNova-Regular.ttf) format("ttf");
-  font-weight: normal;
+	font-family: "Proxima-Nova";
+	src: url("../../fonts/ProximaNova-Regular.ttf") format("truetype");
+	font-weight: normal;
 }
+
 @font-face {
-  font-family: "Proxima-Nova";
-  src: url(../../fonts/ProximaNova-Bold.ttf) format("ttf");
-  font-weight: 700;
+	font-family: "Proxima-Nova";
+	src: url("../../fonts/ProximaNova-Bold.ttf") format("truetype");
+	font-weight: 700;
 }
 
 body {
