--- a/css/main.css
+++ b/css/main.css
@@ -56,12 +56,12 @@ select:hover, select:focus {
 
 @font-face {
   font-family: "Proxima-Nova";
-  src: url(../../fonts/ProximaNova-Regular.ttf) format("ttf");
+  src: url("../../fonts/ProximaNova-Regular.ttf") format("truetype");
   font-weight: normal;
 }
 @font-face {
   font-family: "Proxima-Nova";
-  src: url(../../fonts/ProximaNova-Bold.ttf) format("ttf");
+  src: url("../../fonts/ProximaNova-Bold.ttf") format("truetype");
   font-weight: 700;
 }
 body {
